--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,16 @@ repositories {
 
 dependencies {
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'io.rest-assured', name: 'rest-assured', version: '4.3.0'
-    testCompile group: 'io.rest-assured', name: 'json-schema-validator', version: '4.3.0'
+    compile group: 'io.rest-assured', name: 'rest-assured', version: '4.3.0'
+    compile group: 'io.rest-assured', name: 'json-schema-validator', version: '4.3.0'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.10.3'
+    testCompile group: 'io.cucumber', name: 'cucumber-java', version: '4.8.1'
+    testCompile group: 'io.cucumber', name: 'cucumber-testng', version: '4.8.1'
+    testCompile group: 'io.cucumber', name: 'cucumber-picocontainer', version: '4.8.1'
+    testCompile group: 'io.qameta.allure', name: 'allure-cucumber4-jvm', version: '2.13.2'
+
+
+
 }
 
 checkstyle {
